fixed text overlapping animation

--- a/css/index.css
+++ b/css/index.css
@@ -398,11 +398,11 @@ body {
   }
 }
 
-@media only screen and (max-width: 1024px) {
+@media only screen and (max-width: 1020px) {
   .history-element {
     width: 100%;
     justify-content: flex-start;
-    padding-left: 125px;
+    padding-left: 185px;
   }
 
   .history-element-right {
@@ -444,6 +444,10 @@ body {
 }
 
 @media only screen and (max-width: 420px) {
+  .history-element {
+    padding-left: 125px;
+  }
+
   .personal-info>.name {
     font-size: 2em;
   }
